AL Falah Group Human Resources

--- a/we-supply.html
+++ b/we-supply.html
@@ -206,30 +206,44 @@
 		</div>
 	</section>
 
-	<section class="ftco-section contact-section ftco-no-pb" id="contact-section">
+	<section id="we-supply-market" class="ftco-section ftco-no-pt ftco-no-pb testimony-section img">
+		<div class="overlay"></div>
 		<div class="container">
-			<div class="row justify-content-between mb-5 pb-3">
-				<div class="col-md-6 heading-section ftco-animate">
-					<img src="images/official/we1.jpeg" alt="">
-				</div>
-                <div class="col-md-6 heading-section ftco-animate">
-					<span class="subheading">CSR Policy</span>
-					<h2 class="mb-4">SUPERMARKET
-                    </h2>
-					<p class="justify-content-start" style="text-align: initial;">
-                        <ul>
-                            <li>Salesmen</li>
-                            <li>Check Out Cashier</li>
-                            <li>Trolley Boys</li>
-                            <li>Shelves/ Rack Organizers</li>
-                            <li>Cleaners</li>
-                        </ul>
-                    </p>
-				</div>
+		  <div class="row ftco-animate justify-content-center">
+			<div class="col-md-6 p-4 pl-md-0 py-md-5 pr-md-5 d-flex align-items-center">
+			  <div class="heading-section heading-section-white">
+				<img style="height: 12rem;" src="images/official/we1.jpeg" alt="">
+			  </div>
+			  <div class="content">
+				<h4 class="text-black">SUPERMARKET</h4>
+				<ul>
+					<li class="text-black">Salesmen</li>
+					<li class="text-black">Check Out Cashier</li>
+					<li class="text-black">Trolley Boys</li>
+					<li class="text-black">Shelves/ Rack Organizers</li>
+					<li class="text-black">Cleaners</li>
+				</ul>
 			</div>
+			</div>
+			<div class="col-md-6 p-4 pl-md-0 py-md-5 pr-md-5 d-flex align-items-center">
+				<div class="heading-section heading-section-white">
+				  <img style="height: 12rem;" src="images/official/we1.jpeg" alt="">
+				</div>
+				<div class="content">
+				  <h4 class="text-black">SUPERMARKET</h4>
+				  <ul>
+					  <li class="text-black">Salesmen</li>
+					  <li class="text-black">Check Out Cashier</li>
+					  <li class="text-black">Trolley Boys</li>
+					  <li class="text-black">Shelves/ Rack Organizers</li>
+					  <li class="text-black">Cleaners</li>
+				  </ul>
+			  </div>
+			</div>
+		  </div>
 		</div>
 	</section>
-
+	
 	<footer class="ftco-footer">
 		<div class="container mb-5 pb-4">
 		  <div class="row">
