AL Falah Group Human Resources

--- a/csr.html
+++ b/csr.html
@@ -138,9 +138,9 @@
 						<a href="#">About Us <i class="bx bxs-chevron-down"></i></a>
 						<div class="sub-menu single-column-menu">
 						  <ul>
-							<li><a href="index.html">Indroduction</a></li>
-							<li><a href="index.html">Mission & Vision</a></li>
-							<li><a href="index.html">Message From Chairman</a></li>
+							<li><a href="introduction.html">Indroduction</a></li>
+							<li><a href="mission-vision.html">Mission & Vision</a></li>
+							<li><a href="founder.html">Message From Chairman</a></li>
 							<li><a href="index.html">Our Valued Clients</a></li>
 							<li><a href="index.html">About Nepal</a></li>
 						  </ul>
@@ -258,12 +258,12 @@
 				<div class="d-flex">
 				 <ul class="list-unstyled mr-md-4">
 					<li>
-					  <a href="#"
+					  <a href="founder.html"
 						><span class="fa fa-chevron-right mr-2"></span>Message</a
 					  >
 					</li>
 					<li>
-					  <a href="#"
+					  <a href="introduction.html"
 						><span class="fa fa-chevron-right mr-2"></span>About Us</a
 					  >
 					</li>
@@ -280,7 +280,7 @@
 				  </ul> 
 				  <ul class="list-unstyled ml-md-5">
 					<li>
-					  <a href="#"
+					  <a href="contact.html"
 						><span class="fa fa-chevron-right mr-2"></span>Contact</a
 					  >
 					</li>
@@ -308,21 +308,23 @@
   
 			<div class="col-lg col-md-6">
 			  <div class="ftco-footer-widget">
-				<h2 class="ftco-heading-2">Services</h2>
+				<h2 class="ftco-heading-2">Useful Links</h2>
 				<ul class="list-unstyled">
 				  <li>
-					<a href="#"
-					  ><span class="fa fa-chevron-right mr-2"></span>Fair Sourcing</a
+					<a href="https://dofe.gov.np/"
+					  ><span class="fa fa-chevron-right mr-2"></span>
+					  Department Of Foreign Employment
+					  </a
 					>
 				  </li>
 				  <li>
-					<a href="#"
-					  ><span class="fa fa-chevron-right mr-2"></span>Overseas Recuriment</a
+					<a href="http://feo.gov.np/"
+					  ><span class="fa fa-chevron-right mr-2"></span>Labour Approval</a
 					>
 				  </li>
 				  <li>
-					<a href="#"
-					  ><span class="fa fa-chevron-right mr-2"></span>Resoirces Palcement</a
+					<a href="https://www.responsiblebusiness.org/"
+					  ><span class="fa fa-chevron-right mr-2"></span>Responsible Business Alliance (RBA)</a
 					>
 				  </li>
 				</ul>
