--- a/index.html
+++ b/index.html
@@ -98,101 +98,101 @@
       </div>
     </div>
    
-    <!-- Navbar  -->
-    <div class="top_header___">
-      <!-- header start -->
-      <header class="header">
-        <div class="container">
-          <div class="row v-center">
-            <div class="header-item item-left">
-              <div class="logo">
-                <a
-                  class="navbar-brand d-flex align-items-center"
-                  href="index.html"
-                >
-                  <img
-                    style="height: 5rem"
-                    src="images/official/logo.jpeg"
-                    alt=""
-                  />
-                  <span class="ml-2"
-                    >AL Falah <small>Group Human Resources</small></span
-                  >
-                </a>
-              </div>
-            </div>
-            <!-- menu start here -->
-            <div class="header-item item-center">
-              <div class="menu-overlay"></div>
-              <nav class="menu">
-                <div class="mobile-menu-head">
-                  <div class="go-back"><i class="bx bxs-chevron-left"></i></div>
-                  <div class="current-menu-title"></div>
-                  <div class="mobile-menu-close">&times;</div>
-                </div>
-                <ul class="menu-main">
-                  <li>
-                    <a href="index.html">Home</a>
-                  </li>
-                  <li class="menu-item-has-children">
-                    <a href="#">About Us <i class="bx bxs-chevron-down"></i></a>
-                    <div class="sub-menu single-column-menu">
-                      <ul>
-                        <li><a href="index.html">Indroduction</a></li>
-                        <li><a href="index.html">Mission & Vision</a></li>
-                        <li><a href="index.html">Message From Chairman</a></li>
-                        <li><a href="index.html">Our Valued Clients</a></li>
-                        <li><a href="index.html">About Nepal</a></li>
-                      </ul>
-                    </div>
-                  </li>
-                  <li class="menu-item-has-children">
-                    <a href="#"
-                      >Our Services <i class="bx bxs-chevron-down"></i
-                    ></a>
-                    <div class="sub-menu single-column-menu">
-                      <ul>
-                        <li><a href="index.html">Fair Sourcing</a></li>
-                        <li><a href="index.html">Overseas Recuriment</a></li>
-                        <li><a href="index.html">Resoirces Palcement</a></li>
-                      </ul>
-                    </div>
-                  </li>
-                  <li class="menu-item-has-children">
-                    <a href="#"
-                      >Employers/Jobseeker <i class="bx bxs-chevron-down"></i
-                    ></a>
-                    <div class="sub-menu single-column-menu">
-                      <ul>
-                        <li><a href="index.html">We Supply</a></li>
-                        <li><a href="index.html">Recuriment Process</a></li>
-                        <li><a href="index.html">Required Documents</a></li>
-                        <li><a href="index.html">Downloads</a></li>
-                      </ul>
-                    </div>
-                  </li>
-                  <li>
-                    <a href="index.html">CSR</a>
-                  </li>
-                  <li>
-                    <a href="index.html">Contact</a>
-                  </li>
-                </ul>
-              </nav>
-            </div>
-            <!-- menu end here -->
-            <div class="header-item item-right">
-              <!-- mobile menu trigger -->
-              <div class="mobile-menu-trigger">
-                <i class="bx bx-grid-alt"></i>
-              </div>
-            </div>
-          </div>
-        </div>
-      </header>
-      <!-- header end -->
+<!-- Navbar  -->
+<div class="top_header___">
+  <!-- header start -->
+  <header class="header">
+  <div class="container">
+    <div class="row v-center">
+    <div class="header-item item-left">
+      <div class="logo">
+      <a
+        class="navbar-brand d-flex align-items-center"
+        href="index.html"
+      >
+        <img
+        style="height: 5rem"
+        src="images/official/logo.jpeg"
+        alt=""
+        />
+        <span class="ml-2"
+        >AL Falah <small>Group Human Resources</small></span
+        >
+      </a>
+      </div>
     </div>
-    <!-- End Navbar  -->
+    <!-- menu start here -->
+    <div class="header-item item-center">
+      <div class="menu-overlay"></div>
+      <nav class="menu">
+      <div class="mobile-menu-head">
+        <div class="go-back"><i class="bx bxs-chevron-left"></i></div>
+        <div class="current-menu-title"></div>
+        <div class="mobile-menu-close">&times;</div>
+      </div>
+      <ul class="menu-main">
+        <li>
+        <a href="index.html">Home</a>
+        </li>
+        <li class="menu-item-has-children">
+        <a href="#">About Us <i class="bx bxs-chevron-down"></i></a>
+        <div class="sub-menu single-column-menu">
+          <ul>
+          <li><a href="introduction.html">Indroduction</a></li>
+          <li><a href="mission-vision.html">Mission & Vision</a></li>
+          <li><a href="founder.html">Message From Chairman</a></li>
+          <li><a href="index.html">Our Valued Clients</a></li>
+          <li><a href="index.html">About Nepal</a></li>
+          </ul>
+        </div>
+        </li>
+        <li class="menu-item-has-children">
+        <a href="#"
+          >Our Services <i class="bx bxs-chevron-down"></i
+        ></a>
+        <div class="sub-menu single-column-menu">
+          <ul>
+          <li><a href="index.html">Fair Sourcing</a></li>
+          <li><a href="index.html">Overseas Recuriment</a></li>
+          <li><a href="index.html">Resoirces Palcement</a></li>
+          </ul>
+        </div>
+        </li>
+        <li class="menu-item-has-children">
+        <a href="#"
+          >Employers/Jobseeker <i class="bx bxs-chevron-down"></i
+        ></a>
+        <div class="sub-menu single-column-menu">
+          <ul>
+          <li><a href="index.html">We Supply</a></li>
+          <li><a href="index.html">Recuriment Process</a></li>
+          <li><a href="index.html">Required Documents</a></li>
+          <li><a href="index.html">Downloads</a></li>
+          </ul>
+        </div>
+        </li>
+        <li>
+        <a href="csr.html">CSR</a>
+        </li>
+        <li>
+        <a href="contact.html">Contact</a>
+        </li>
+      </ul>
+      </nav>
+    </div>
+    <!-- menu end here -->
+    <div class="header-item item-right">
+      <!-- mobile menu trigger -->
+      <div class="mobile-menu-trigger">
+      <i class="bx bx-grid-alt"></i>
+      </div>
+    </div>
+    </div>
+  </div>
+  </header>
+  <!-- header end -->
+</div>
+<!-- End Navbar  -->
 
     <section
       class="hero-wrap js-fullheight"
@@ -446,7 +446,7 @@
               class="heading-section heading-section-white p-4 pl-md-0 py-md-5 pr-md-5"
             >
               <span class="subheading">Greetings to all from AL-Falah Group family.</span>
-              <h2 class="mb-4">Message From Managing Director</h2>
+              <h2 class="mb-4">Message From Director</h2>
               <p>
                 Firstly would like to take this opportunity to thank all of our valued clients. Your support and trust has elevated us to stand in a good position in manpower business industry in Nepal for more than two decades.
 
@@ -458,9 +458,12 @@
 				<br>
 				<br>
 				<h4>
-					Founder/Chairman <br>
-					Mr. Raju Sir
+        
+					Founder: Chairman - Managing Director <br>
 				</h4>
+              </p>
+              <p>
+                <a href="founder.html" class="btn btn-primary"> View All Message From Directors </a>
               </p>
             </div>
           </div>
@@ -869,168 +872,170 @@
 		<div class="container_re">
 		  <div class="row justify-content-center">
 			<div class="col-md-12 text-center">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3532.637008037496!2d85.35039587546703!3d27.697611876188226!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjfCsDQxJzUxLjQiTiA4NcKwMjEnMTAuNyJF!5e0!3m2!1sen!2snp!4v1692043620284!5m2!1sen!2snp" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14130.57199346301!2d85.3530046!3d27.6974268!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb190dfbeb1f47%3A0xad4c71d85c9eefb5!2sAl%20Falah%20Group%20Human%20Resource!5e0!3m2!1sen!2snp!4v1692502615477!5m2!1sen!2snp" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 			</div>
 		  </div>
 		</div>
 	</section>
 
-    <footer class="ftco-footer">
-      <div class="container mb-5 pb-4">
-        <div class="row">
-          <div class="col-lg col-md-6">
-            <div class="ftco-footer-widget">
-              <h2 class="ftco-heading-2 d-flex align-items-center">Connect with us
-			</h2>
-              <p>
-                You can connect with us in different social medias.
-              </p>
-              <ul class="ftco-footer-social list-unstyled mt-4">
-                <li>
-                  <a href="#"><span class="fa fa-twitter"></span></a>
-                </li>
-                <li>
-                  <a href="#"><span class="fa fa-facebook"></span></a>
-                </li>
-                <li>
-                  <a href="#"><span class="fa fa-instagram"></span></a>
-                </li>
-              </ul>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6">
-            <div class="ftco-footer-widget">
-              <h2 class="ftco-heading-2">Quick Links
-			</h2>
-              <div class="d-flex">
-               <ul class="list-unstyled mr-md-4">
-                  <li>
-                    <a href="#"
-                      ><span class="fa fa-chevron-right mr-2"></span>Message</a
-                    >
-                  </li>
-                  <li>
-                    <a href="#"
-                      ><span class="fa fa-chevron-right mr-2"></span>About Us</a
-                    >
-                  </li>
-                  <li>
-                    <a href="#"
-                      ><span class="fa fa-chevron-right mr-2"></span>Services</a
-                    >
-                  </li>
-                  <li>
-                    <a href="#"
-                      ><span class="fa fa-chevron-right mr-2"></span>Vacancies</a
-                    >
-                  </li>
-                </ul> 
-                <ul class="list-unstyled ml-md-5">
-                  <li>
-                    <a href="#"
-                      ><span class="fa fa-chevron-right mr-2"></span>Contact</a
-                    >
-                  </li>
-                  <li>
-                    <a href="#"
-                      ><span class="fa fa-chevron-right mr-2"></span>Help</a
-                    >
-                  </li>
-                  <li>
-                    <a href="#"
-                      ><span class="fa fa-chevron-right mr-2"></span>Privacy
-                      Policy</a
-                    >
-                  </li>
-                  <li>
-                    <a href="#"
-                      ><span class="fa fa-chevron-right mr-2"></span>Terms of
-                      Use</a
-                    >
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg col-md-6">
-            <div class="ftco-footer-widget">
-              <h2 class="ftco-heading-2">Services</h2>
-              <ul class="list-unstyled">
-                <li>
-                  <a href="#"
-                    ><span class="fa fa-chevron-right mr-2"></span>Fair Sourcing</a
-                  >
-                </li>
-                <li>
-                  <a href="#"
-                    ><span class="fa fa-chevron-right mr-2"></span>Overseas Recuriment</a
-                  >
-                </li>
-                <li>
-                  <a href="#"
-                    ><span class="fa fa-chevron-right mr-2"></span>Resoirces Palcement</a
-                  >
-                </li>
-              </ul>
-            </div>
-          </div>
-
-          <div class="col-lg col-md-6">
-            <div class="ftco-footer-widget">
-              <h2 class="ftco-heading-2">Have a Questions?</h2>
-              <div class="block-23 mb-3">
-                <ul>
-                  <li>
-                    <span class="fa fa-map-marker mr-3"></span
-                    ><span class="text"
-                      >Near to International Airport, Sinamangal-9, Kathmandu</span
-                    >
-                  </li>
-                  <li>
-                    <a href="#"
-                      ><span class="fa fa-phone mr-3"></span
-                      ><span class="text">(+977) 9813965529</span></a
-                    >
-                  </li>
-                  <li>
-                    <a href="#"
-                      ><span class="fa fa-paper-plane mr-3"></span
-                      >
-					  <span class="text">admin@alfalahghr.com</span></a
-                    >
-					<a href="#"
-                      ><span class="fa fa-paper-planefe mr-3 ps-16"></span
+	<footer class="ftco-footer">
+		<div class="container mb-5 pb-4">
+		  <div class="row">
+			<div class="col-lg col-md-6">
+			  <div class="ftco-footer-widget">
+				<h2 class="ftco-heading-2 d-flex align-items-center">Connect with us
+			  </h2>
+				<p>
+				  You can connect with us in different social medias.
+				</p>
+				<ul class="ftco-footer-social list-unstyled mt-4">
+				  <li>
+					<a href="#"><span class="fa fa-twitter"></span></a>
+				  </li>
+				  <li>
+					<a href="#"><span class="fa fa-facebook"></span></a>
+				  </li>
+				  <li>
+					<a href="#"><span class="fa fa-instagram"></span></a>
+				  </li>
+				</ul>
+			  </div>
+			</div>
+  
+			<div class="col-lg-4 col-md-6">
+			  <div class="ftco-footer-widget">
+				<h2 class="ftco-heading-2">Quick Links
+			  </h2>
+				<div class="d-flex">
+				 <ul class="list-unstyled mr-md-4">
+					<li>
+					  <a href="founder.html"
+						><span class="fa fa-chevron-right mr-2"></span>Message</a
+					  >
+					</li>
+					<li>
+					  <a href="introduction.html"
+						><span class="fa fa-chevron-right mr-2"></span>About Us</a
+					  >
+					</li>
+					<li>
+					  <a href="#"
+						><span class="fa fa-chevron-right mr-2"></span>Services</a
+					  >
+					</li>
+					<li>
+					  <a href="#"
+						><span class="fa fa-chevron-right mr-2"></span>Vacancies</a
+					  >
+					</li>
+				  </ul> 
+				  <ul class="list-unstyled ml-md-5">
+					<li>
+					  <a href="contact.html"
+						><span class="fa fa-chevron-right mr-2"></span>Contact</a
+					  >
+					</li>
+					<li>
+					  <a href="#"
+						><span class="fa fa-chevron-right mr-2"></span>Help</a
+					  >
+					</li>
+					<li>
+					  <a href="#"
+						><span class="fa fa-chevron-right mr-2"></span>Privacy
+						Policy</a
+					  >
+					</li>
+					<li>
+					  <a href="#"
+						><span class="fa fa-chevron-right mr-2"></span>Terms of
+						Use</a
+					  >
+					</li>
+				  </ul>
+				</div>
+			  </div>
+			</div>
+  
+			<div class="col-lg col-md-6">
+			  <div class="ftco-footer-widget">
+				<h2 class="ftco-heading-2">Useful Links</h2>
+				<ul class="list-unstyled">
+				  <li>
+					<a href="https://dofe.gov.np/"
+					  ><span class="fa fa-chevron-right mr-2"></span>
+					  Department Of Foreign Employment
+					  </a
+					>
+				  </li>
+				  <li>
+					<a href="http://feo.gov.np/"
+					  ><span class="fa fa-chevron-right mr-2"></span>Labour Approval</a
+					>
+				  </li>
+				  <li>
+					<a href="https://www.responsiblebusiness.org/"
+					  ><span class="fa fa-chevron-right mr-2"></span>Responsible Business Alliance (RBA)</a
+					>
+				  </li>
+				</ul>
+			  </div>
+			</div>
+  
+			<div class="col-lg col-md-6">
+			  <div class="ftco-footer-widget">
+				<h2 class="ftco-heading-2">Have a Questions?</h2>
+				<div class="block-23 mb-3">
+				  <ul>
+					<li>
+					  <span class="fa fa-map-marker mr-3"></span
+					  ><span class="text"
+						>Near to International Airport, Sinamangal-9, Kathmandu</span
+					  >
+					</li>
+					<li>
+					  <a href="#"
+						><span class="fa fa-phone mr-3"></span
+						><span class="text">(+977) 9813965529</span></a
+					  >
+					</li>
+					<li>
+					  <a href="#"
+						><span class="fa fa-paper-plane mr-3"></span
 						>
-					  <span class="text">info@alfalahghr.com</span></a
-                    >
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="container-fluid bg-primary">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-6 aside-stretch py-3">
-              <p class="mb-0">
-                Copyright &copy;
-                <script>
-                  document.write(new Date().getFullYear());
-                </script>
-                All rights reserved | Made with
-                <i class="fa fa-heart" aria-hidden="true"></i> by
-                <a href="#" target="_blank">Suman Bhattrai</a> & 
-                <a href="#" target="_blank">Goveend Sonee</a>
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </footer>
+						<span class="text">admin@alfalahghr.com</span></a
+					  >
+					  <a href="#"
+						><span class="fa fa-paper-planefe mr-3 ps-16"></span
+						  >
+						<span class="text">info@alfalahghr.com</span></a
+					  >
+					</li>
+				  </ul>
+				</div>
+			  </div>
+			</div>
+		  </div>
+		</div>
+		<div class="container-fluid bg-primary">
+		  <div class="container">
+			<div class="row">
+			  <div class="col-md-6 aside-stretch py-3">
+				<p class="mb-0">
+				  Copyright &copy;
+				  <script>
+					document.write(new Date().getFullYear());
+				  </script>
+				  All rights reserved | Made with
+				  <i class="fa fa-heart" aria-hidden="true"></i> by
+				  <a href="#" target="_blank">Suman Bhattrai</a> & 
+				  <a href="#" target="_blank">Goveend Sonee</a>
+				</p>
+			  </div>
+			</div>
+		  </div>
+		</div>
+	</footer>
 
     <div
       class="modal fade"
