--- a/blog.html
+++ b/blog.html
@@ -47,54 +47,101 @@
 </div>
 </div>
 </div>
-<div class="pt-4 pb-5">
- <div class="container">
-  <div class="row d-flex align-items-start align-items-center px-3 px-md-0">
-   <div class="col-md-4 d-flex mb-2 mb-md-0">
-    <a class="navbar-brand d-flex align-items-center" href="index.html">
-     <span class="flaticon flaticon-crane"></span>
-     <span class="ml-2">Wilcon <small>Construction Company</small></span>
-   </a>
- </div>
- <div class="col-md-4 d-flex topper mb-md-0 mb-2 align-items-center">
-  <div class="icon d-flex justify-content-center align-items-center">
-   <span class="fa fa-map"></span>
- </div>
- <div class="pr-md-4 pl-md-3 pl-3 text">
-   <p class="con"><span>Free Call</span> <span>+1 234 456 78910</span></p>
-   <p class="con">Call Us Now 24/7 Customer Support</p>
- </div>
-</div>
-<div class="col-md-4 d-flex topper mb-md-0 align-items-center">
-  <div class="icon d-flex justify-content-center align-items-center"><span class="fa fa-paper-plane"></span>
+<!-- Navbar  -->
+<div class="top_header___">
+  <!-- header start -->
+  <header class="header">
+  <div class="container">
+    <div class="row v-center">
+    <div class="header-item item-left">
+      <div class="logo">
+      <a
+        class="navbar-brand d-flex align-items-center"
+        href="index.html"
+      >
+        <img
+        style="height: 5rem"
+        src="images/official/logo.jpeg"
+        alt=""
+        />
+        <span class="ml-2"
+        >AL Falah <small>Group Human Resources</small></span
+        >
+      </a>
+      </div>
+    </div>
+    <!-- menu start here -->
+    <div class="header-item item-center">
+      <div class="menu-overlay"></div>
+      <nav class="menu">
+      <div class="mobile-menu-head">
+        <div class="go-back"><i class="bx bxs-chevron-left"></i></div>
+        <div class="current-menu-title"></div>
+        <div class="mobile-menu-close">&times;</div>
+      </div>
+      <ul class="menu-main">
+        <li>
+        <a href="index.html">Home</a>
+        </li>
+        <li class="menu-item-has-children">
+        <a href="#">About Us <i class="bx bxs-chevron-down"></i></a>
+        <div class="sub-menu single-column-menu">
+          <ul>
+          <li><a href="introduction.html">Indroduction</a></li>
+          <li><a href="mission-vision.html">Mission & Vision</a></li>
+          <li><a href="founder.html">Message From Chairman</a></li>
+          <li><a href="index.html">Our Valued Clients</a></li>
+          <li><a href="index.html">About Nepal</a></li>
+          </ul>
+        </div>
+        </li>
+        <li class="menu-item-has-children">
+        <a href="#"
+          >Our Services <i class="bx bxs-chevron-down"></i
+        ></a>
+        <div class="sub-menu single-column-menu">
+          <ul>
+          <li><a href="index.html">Fair Sourcing</a></li>
+          <li><a href="index.html">Overseas Recuriment</a></li>
+          <li><a href="index.html">Resoirces Palcement</a></li>
+          </ul>
+        </div>
+        </li>
+        <li class="menu-item-has-children">
+        <a href="#"
+          >Employers/Jobseeker <i class="bx bxs-chevron-down"></i
+        ></a>
+        <div class="sub-menu single-column-menu">
+          <ul>
+          <li><a href="index.html">We Supply</a></li>
+          <li><a href="index.html">Recuriment Process</a></li>
+          <li><a href="index.html">Required Documents</a></li>
+          <li><a href="index.html">Downloads</a></li>
+          </ul>
+        </div>
+        </li>
+        <li>
+        <a href="csr.html">CSR</a>
+        </li>
+        <li>
+        <a href="contact.html">Contact</a>
+        </li>
+      </ul>
+      </nav>
+    </div>
+    <!-- menu end here -->
+    <div class="header-item item-right">
+      <!-- mobile menu trigger -->
+      <div class="mobile-menu-trigger">
+      <i class="bx bx-grid-alt"></i>
+      </div>
+    </div>
+    </div>
   </div>
-  <div class="text pl-3 pl-md-3">
-   <p class="hr"><span>Our Location</span></p>
-   <p class="con">198 West 21th Street, Suite 721 New York NY 10016</p>
- </div>
+  </header>
+  <!-- header end -->
 </div>
-</div>
-</div>
-</div>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco-navbar-light" id="ftco-navbar">
- <div class="container d-flex align-items-center">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-   <span class="fa fa-bars"></span> Menu
- </button>
- <div class="collapse navbar-collapse" id="ftco-nav">
-   <ul class="navbar-nav mr-auto">
-    <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-    <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-    <li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
-    <li class="nav-item"><a href="project.html" class="nav-link">Projects</a></li>
-    <li class="nav-item active"><a href="blog.html" class="nav-link">Blog</a></li>
-    <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-  </ul>
-  <a href="#" class="btn-custom" data-toggle="modal" data-target="#exampleModalCenter">Inquire Now</a>
-</div>
-</div>
-</nav>
-<!-- END nav -->
+<!-- End Navbar  -->
 
 <section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_2.jpg');" data-stellar-background-ratio="0.5">
   <div class="overlay"></div>
@@ -372,6 +419,7 @@
 <script src="js/google-map.js"></script>
 
 <script src="js/main.js"></script>
+<script src="js/top_navbar.js"></script>
 
 </body>
 </html>
