--- a/introduction.html
+++ b/introduction.html
@@ -191,116 +191,105 @@
 	  </div>
 	</header>
 	<!-- header end -->
-  </div>
-  <!-- End Navbar  -->
+</div>
+<!-- End Navbar  -->
+	
 	
 	<section class="hero-wrap hero-wrap-2" style="background-image: url('images/official/ser1.webp');" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row no-gutters slider-text align-items-end justify-content-start">
 				<div class="col-md-9 ftco-animate pb-5">
-					<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span>Contact us <i class="fa fa-chevron-right"></i></span></p>
-					<h1 class="mb-3 bread">Contact us</h1>
+					<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span>About Us <i class="fa fa-chevron-right"></i></span></p>
+					<h1 class="mb-3 bread">About Us</h1>
 				</div>
 			</div>
 		</div>
 	</section>
 
-	<section class="ftco-section contact-section ftco-no-pb" id="contact-section">
+	<section class="ftco-section" id="about-section">
 		<div class="container">
-			<div class="row justify-content-center mb-5 pb-3">
-				<div class="col-md-7 heading-section text-center ftco-animate">
-					<span class="subheading">Contact us</span>
-					<h2 class="mb-4">Message us for more details</h2>
-					<p>If you have any questions about our service, please feel free to reach out to us using the contact form below</p>
-				</div>
+		  <div class="row">
+			<div class="col-md-6 d-flex align-items-stretch">
+			  <div class="about-wrap img w-100" style="background-image: url(images/official/4.jpg);">
+				  <div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-crane"></span></div>
+			  </div>
 			</div>
-
-			<div class="row block-9">
-				<div class="col-md-8">
-					<form action="#" class="p-4 p-md-5 contact-form">
-						<div class="row">
-							<div class="col-md-6">
-								<div class="form-group">
-									<input type="text" class="form-control" placeholder="Your Name">
-								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="form-group">
-									<input type="text" class="form-control" placeholder="Your Email">
-								</div>
-							</div>
-							<div class="col-md-12">
-								<div class="form-group">
-									<input type="text" class="form-control" placeholder="Subject">
-								</div>
-							</div>
-							<div class="col-md-12">
-								<div class="form-group">
-									<textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
-								</div>
-							</div>
-							<div class="col-md-12">
-								<div class="form-group">
-									<input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
-								</div>
-							</div>
-						</div>
-					</form>
-					
+			<div class="col-md-6 py-5 pl-md-5">
+			  <div class="row justify-content-center mb-4 pt-md-4">
+				<div class="col-md-12 heading-section ftco-animate">
+				  <span class="subheading"
+					>Welcome to AL-Falah Group Human Resources</span
+				  >
+				  <h2 class="mb-4">AL-Falah A ManPower Company</h2>
+				  <div class="d-flex about">
+					<div class="icon"><span class="flaticon-hammer"></span></div>
+					<h3>
+					  We're in this business since 2079 and We provide the best
+					  human resoure services
+					</h3>
+				  </div>
+				  <p>
+					AL-Falah Group Human Resources Pvt. Ltd., (established in
+					2079) started its recruitment operation with an office
+					comprising of only few staff. Since then, we have been able to
+					set up a bench mark in our business scope with our best
+					professional services which is effectively maintained by
+					dedicated and dynamic staff members. Having been awarded with
+					letter of appreciation from Ministry of Labor, clients &
+					social organizations, we achieved the best of all when first
+					in the country of its kind to be certified with ISO 9001-2008
+					in the year 2004 as an outcome of our qualitative management
+					system.
+					<br />We are continuously adopting latest technology of
+					working pattern in office to increase efficiency of the work
+					load so as to meet the actual requirement of our prominent
+					multinational clients which has reached up to hundred in
+					numbers.
+				  </p>
+				  <div class="d-flex video-image align-items-center mt-md-4">
+					<a
+					  href="#"
+					  class="video img d-flex align-items-center justify-content-center"
+					  style="background-image: url(images/official/12.jpg)"
+					>
+					  <span class="fa fa-play-circle"></span>
+					</a>
+					<h4 class="ml-4">
+					  This is how we work on our clients, Watch video
+					</h4>
+				  </div>
 				</div>
+			  </div>
+			</div>
+		  </div>
+		</div>
+	  </section>
 
-				<div class="col-md-4 d-flex pl-md-5">
-					<div class="row">
-						<div class="dbox w-100 d-flex ftco-animate">
-							<div class="icon d-flex align-items-center justify-content-center">
-								<span class="fa fa-map-marker"></span>
-							</div>
-							<div class="text">
-								<p><span>Address:</span> Near to International Airport, Sinamangal-9, Kathmandu
-								</p>
-							</div>
-						</div>
-						<div class="dbox w-100 d-flex ftco-animate">
-							<div class="icon d-flex align-items-center justify-content-center">
-								<span class="fa fa-phone"></span>
-							</div>
-							<div class="text">
-								<p><span>Phone:</span> <a href="tel://1234567920">	(+977) 9813965529</a></p>
-							</div>
-						</div>
-						<div class="dbox w-100 d-flex ftco-animate">
-							<div class="icon d-flex align-items-center justify-content-center">
-								<span class="fa fa-paper-plane"></span>
-							</div>
-							<div class="text">
-								<p><span>Admin Email:</span> <a href="mailto:admin@alfalahghr.com">admin@alfalahghr.com</a></p>
-							</div>
-						</div>
-						<div class="dbox w-100 d-flex ftco-animate">
-							<div class="icon d-flex align-items-center justify-content-center">
-								<span class="fa fa-paper-plane"></span>
-							</div>
-							<div class="text">
-								<p><span>Info Email:</span> <a href="mailto:info@alfalahghr.com">info@alfalahghr.com</a></p>
-							</div>
-						</div>
+	<section class="ftco-intro">
+		<div class="container">
+			<div class="row justify-content-start">
+				<div class="col-md-12 text-align">
+					<div class="img">
+						<div class="overlay"></div>
+						<h2>Providing Personalized and High Quality Services</h2>
+						<p>
+							AL-Falah Group Human Resources Pvt. Ltd. was established in 1997 A.D. and started its recruitment operation with an office comprising of only few staff. Since then, we have been able to set up a bench mark in our business scope with our best services provided by dedicated and dynamic staff  members. Having been awarded with letter of appreciation from Ministry of Labor clients & social organizations we have achieved the best of all We are the first in the country of its kind to be certified with ISO 9001-2008 in the year 2004 as an outcome of our qualitative management system. We are continuously adapting latest technology of working pattern in office to increase efficiency of the work load so as to meet the actual requirement of our prominent multinational clients which has reached up to hundred in number.
+							<br>
+							<br>
+							We also focus to support national priorities to reduce unemployment and generate foreign remittance thereby raising the socio-economic status of underprivileged people of Nepal.It has always been a part of our culture to concentrate and perceive the requirements of our valued clients in order to execute them within a given deadline. We heartily welcome any suggestions and look forward to a long lasting business relationship.
+							<br>
+							<br>
+							We remain thankful to every supportive ones.
+						</p>
 					</div>
 				</div>
-				<div class="col-md-12">
-					<section class="ftco-intro">
-						<div class="container_re">
-						  <div class="row justify-content-center">
-							<div class="col-md-12 text-center">
-								<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14130.57199346301!2d85.3530046!3d27.6974268!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb190dfbeb1f47%3A0xad4c71d85c9eefb5!2sAl%20Falah%20Group%20Human%20Resource!5e0!3m2!1sen!2snp!4v1692502615477!5m2!1sen!2snp" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-							</div>
-						  </div>
-						</div>
-					</section>
-				</div>
 			</div>
 		</div>
 	</section>
+
+	<br>
+	<br>
 
 	<footer class="ftco-footer">
 		<div class="container mb-5 pb-4">
@@ -460,83 +449,138 @@
 		  </div>
 		</div>
 	</footer>
-		
-		<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-			<div class="modal-dialog modal-dialog-centered" role="document">
-				<div class="modal-content">
-					<div class="modal-header">
-						<button type="button" class="close d-flex align-items-center justify-content-center" data-dismiss="modal" aria-label="Close">
-							<span aria-hidden="true" class="fa fa-close"></span>
-						</button>
-					</div>
-					<div class="modal-body p-4 p-md-5">
-						<form action="#" class="appointment-form ftco-animate">
-							<h3>Request Quote</h3>
-							<div class="">
-								<div class="form-group">
-									<input type="text" class="form-control" placeholder="First Name">
-								</div>
-								<div class="form-group">
-									<input type="text" class="form-control" placeholder="Last Name">
-								</div>
-								<div class="form-group">
-									<input type="text" class="form-control" placeholder="Phone">
-								</div>
-							</div>
-							<div class="">
-								<div class="form-group">
-									<div class="form-field">
-										<div class="select-wrap">
-											<div class="icon"><span class="fa fa-chevron-down"></span></div>
-											<select name="" id="" class="form-control">
-												<option value="">Select Your Services</option>
-												<option value="">Architecture</option>
-												<option value="">Renovation</option>
-												<option value="">Construction</option>
-												<option value="">Interior &amp; Exterior</option>
-												<option value="">Chemical Research</option>
-												<option value="">Petroleum &amp; Gas</option>
-												<option value="">Other Services</option>
-											</select>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="">
-								<div class="form-group">
-									<textarea name="" id="" cols="30" rows="4" class="form-control" placeholder="Message"></textarea>
-								</div>
-								<div class="form-group">
-									<input type="submit" value="Request A Quote" class="btn btn-primary py-3 px-4">
-								</div>
-							</div>
-						</form>
-					</div>
-				</div>
-			</div>
-		</div>
 
-		<!-- loader -->
-		<div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
+    <div
+      class="modal fade"
+      id="exampleModalCenter"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="exampleModalCenterTitle"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button
+              type="button"
+              class="close d-flex align-items-center justify-content-center"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true" class="fa fa-close"></span>
+            </button>
+          </div>
+          <div class="modal-body p-4 p-md-5">
+            <form action="#" class="appointment-form ftco-animate">
+              <h3>Request Quote</h3>
+              <div class="">
+                <div class="form-group">
+                  <input
+                    type="text"
+                    class="form-control"
+                    placeholder="First Name"
+                  />
+                </div>
+                <div class="form-group">
+                  <input
+                    type="text"
+                    class="form-control"
+                    placeholder="Last Name"
+                  />
+                </div>
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="Phone" />
+                </div>
+              </div>
+              <div class="">
+                <div class="form-group">
+                  <div class="form-field">
+                    <div class="select-wrap">
+                      <div class="icon">
+                        <span class="fa fa-chevron-down"></span>
+                      </div>
+                      <select name="" id="" class="form-control">
+                        <option value="">Select Your Services</option>
+                        <option value="">Architecture</option>
+                        <option value="">Renovation</option>
+                        <option value="">Construction</option>
+                        <option value="">Interior &amp; Exterior</option>
+                        <option value="">Chemical Research</option>
+                        <option value="">Petroleum &amp; Gas</option>
+                        <option value="">Other Services</option>
+                      </select>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="">
+                <div class="form-group">
+                  <textarea
+                    name=""
+                    id=""
+                    cols="30"
+                    rows="4"
+                    class="form-control"
+                    placeholder="Message"
+                  ></textarea>
+                </div>
+                <div class="form-group">
+                  <input
+                    type="submit"
+                    value="Request A Quote"
+                    class="btn btn-primary py-3 px-4"
+                  />
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
 
-		<script src="js/jquery.min.js"></script>
-		<script src="js/jquery-migrate-3.0.1.min.js"></script>
-		<script src="js/popper.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
-		<script src="js/jquery.easing.1.3.js"></script>
-		<script src="js/jquery.waypoints.min.js"></script>
-		<script src="js/jquery.stellar.min.js"></script>
-		<script src="js/owl.carousel.min.js"></script>
-		<script src="js/jquery.magnific-popup.min.js"></script>
-		<script src="js/jquery.animateNumber.min.js"></script>
-		<script src="js/bootstrap-datepicker.js"></script>
-		<script src="js/jquery.timepicker.min.js"></script>
-		<script src="js/scrollax.min.js"></script>
-		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-		<script src="js/google-map.js"></script>
-		
-		<script src="js/main.js"></script>
-		<script src="js/top_navbar.js"></script>
+    <!-- loader -->
+    <div id="ftco-loader" class="show fullscreen">
+      <svg class="circular" width="48px" height="48px">
+        <circle
+          class="path-bg"
+          cx="24"
+          cy="24"
+          r="22"
+          fill="none"
+          stroke-width="4"
+          stroke="#eeeeee"
+        />
+        <circle
+          class="path"
+          cx="24"
+          cy="24"
+          r="22"
+          fill="none"
+          stroke-width="4"
+          stroke-miterlimit="10"
+          stroke="#F96D00"
+        />
+      </svg>
+    </div>
+
+	<script src="js/jquery.min.js"></script>
+	<script src="js/jquery-migrate-3.0.1.min.js"></script>
+	<script src="js/popper.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/jquery.easing.1.3.js"></script>
+	<script src="js/jquery.waypoints.min.js"></script>
+	<script src="js/jquery.stellar.min.js"></script>
+	<script src="js/owl.carousel.min.js"></script>
+	<script src="js/jquery.magnific-popup.min.js"></script>
+	<script src="js/jquery.animateNumber.min.js"></script>
+	<script src="js/bootstrap-datepicker.js"></script>
+	<script src="js/jquery.timepicker.min.js"></script>
+	<script src="js/scrollax.min.js"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+	<script src="js/google-map.js"></script>
+	
+	<script src="js/main.js"></script>
+	<script src="js/top_navbar.js"></script>
 		
 	</body>
 	</html>
