--- a/services.html
+++ b/services.html
@@ -1,27 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Wilcon - Free Bootstrap 4 Template by Colorlib</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+  <head>
+    <title>AL Falah Group Human Resources</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
 
-  <link rel="stylesheet" href="css/animate.css">
-  
-  <link rel="stylesheet" href="css/owl.carousel.min.css">
-  <link rel="stylesheet" href="css/owl.theme.default.min.css">
-  <link rel="stylesheet" href="css/magnific-popup.css">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
 
-  <link rel="stylesheet" href="css/bootstrap-datepicker.css">
-  <link rel="stylesheet" href="css/jquery.timepicker.css">
-  
-  <link rel="stylesheet" href="css/flaticon.css">
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/animate.css" />
+
+    <link rel="stylesheet" href="css/owl.carousel.min.css" />
+    <link rel="stylesheet" href="css/owl.theme.default.min.css" />
+    <link rel="stylesheet" href="css/magnific-popup.css" />
+
+    <link rel="stylesheet" href="css/bootstrap-datepicker.css" />
+    <link rel="stylesheet" href="css/jquery.timepicker.css" />
+
+    <link rel="stylesheet" href="css/flaticon.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/alfalah.css" />
+  </head>
+  <body>
  <div class="py-1 top">
    <div class="container">
     <div class="row">
@@ -47,54 +61,101 @@
 </div>
 </div>
 </div>
-<div class="pt-4 pb-5">
- <div class="container">
-  <div class="row d-flex align-items-start align-items-center px-3 px-md-0">
-   <div class="col-md-4 d-flex mb-2 mb-md-0">
-    <a class="navbar-brand d-flex align-items-center" href="index.html">
-     <span class="flaticon flaticon-crane"></span>
-     <span class="ml-2">Wilcon <small>Construction Company</small></span>
-   </a>
- </div>
- <div class="col-md-4 d-flex topper mb-md-0 mb-2 align-items-center">
-  <div class="icon d-flex justify-content-center align-items-center">
-   <span class="fa fa-map"></span>
- </div>
- <div class="pr-md-4 pl-md-3 pl-3 text">
-   <p class="con"><span>Free Call</span> <span>+1 234 456 78910</span></p>
-   <p class="con">Call Us Now 24/7 Customer Support</p>
- </div>
+<!-- Navbar  -->
+<div class="top_header___">
+	<!-- header start -->
+	<header class="header">
+	  <div class="container">
+		<div class="row v-center">
+		  <div class="header-item item-left">
+			<div class="logo">
+			  <a
+				class="navbar-brand d-flex align-items-center"
+				href="index.html"
+			  >
+				<img
+				  style="height: 5rem"
+				  src="images/official/logo.jpeg"
+				  alt=""
+				/>
+				<span class="ml-2"
+				  >AL Falah <small>Group Human Resources</small></span
+				>
+			  </a>
+			</div>
+		  </div>
+		  <!-- menu start here -->
+		  <div class="header-item item-center">
+			<div class="menu-overlay"></div>
+			<nav class="menu">
+			  <div class="mobile-menu-head">
+				<div class="go-back"><i class="bx bxs-chevron-left"></i></div>
+				<div class="current-menu-title"></div>
+				<div class="mobile-menu-close">&times;</div>
+			  </div>
+			  <ul class="menu-main">
+				<li>
+				  <a href="index.html">Home</a>
+				</li>
+				<li class="menu-item-has-children">
+				  <a href="#">About Us <i class="bx bxs-chevron-down"></i></a>
+				  <div class="sub-menu single-column-menu">
+					<ul>
+					  <li><a href="introduction.html">Indroduction</a></li>
+					  <li><a href="mission-vision.html">Mission & Vision</a></li>
+					  <li><a href="founder.html">Message From Chairman</a></li>
+					  <li><a href="index.html">Our Valued Clients</a></li>
+					  <li><a href="index.html">About Nepal</a></li>
+					</ul>
+				  </div>
+				</li>
+				<li class="menu-item-has-children">
+				  <a href="#"
+					>Our Services <i class="bx bxs-chevron-down"></i
+				  ></a>
+				  <div class="sub-menu single-column-menu">
+					<ul>
+					  <li><a href="index.html">Fair Sourcing</a></li>
+					  <li><a href="index.html">Overseas Recuriment</a></li>
+					  <li><a href="index.html">Resoirces Palcement</a></li>
+					</ul>
+				  </div>
+				</li>
+				<li class="menu-item-has-children">
+				  <a href="#"
+					>Employers/Jobseeker <i class="bx bxs-chevron-down"></i
+				  ></a>
+				  <div class="sub-menu single-column-menu">
+					<ul>
+					  <li><a href="index.html">We Supply</a></li>
+					  <li><a href="index.html">Recuriment Process</a></li>
+					  <li><a href="index.html">Required Documents</a></li>
+					  <li><a href="index.html">Downloads</a></li>
+					</ul>
+				  </div>
+				</li>
+				<li>
+				  <a href="csr.html">CSR</a>
+				</li>
+				<li>
+				  <a href="contact.html">Contact</a>
+				</li>
+			  </ul>
+			</nav>
+		  </div>
+		  <!-- menu end here -->
+		  <div class="header-item item-right">
+			<!-- mobile menu trigger -->
+			<div class="mobile-menu-trigger">
+			  <i class="bx bx-grid-alt"></i>
+			</div>
+		  </div>
+		</div>
+	  </div>
+	</header>
+	<!-- header end -->
 </div>
-<div class="col-md-4 d-flex topper mb-md-0 align-items-center">
-  <div class="icon d-flex justify-content-center align-items-center"><span class="fa fa-paper-plane"></span>
-  </div>
-  <div class="text pl-3 pl-md-3">
-   <p class="hr"><span>Our Location</span></p>
-   <p class="con">198 West 21th Street, Suite 721 New York NY 10016</p>
- </div>
-</div>
-</div>
-</div>
-</div>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco-navbar-light" id="ftco-navbar">
- <div class="container d-flex align-items-center">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-   <span class="fa fa-bars"></span> Menu
- </button>
- <div class="collapse navbar-collapse" id="ftco-nav">
-   <ul class="navbar-nav mr-auto">
-    <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-    <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-    <li class="nav-item active"><a href="services.html" class="nav-link">Services</a></li>
-    <li class="nav-item"><a href="project.html" class="nav-link">Projects</a></li>
-    <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-    <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-  </ul>
-  <a href="#" class="btn-custom" data-toggle="modal" data-target="#exampleModalCenter">Inquire Now</a>
-</div>
-</div>
-</nav>
-<!-- END nav -->
+<!-- End Navbar  -->
 
 <section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_2.jpg');" data-stellar-background-ratio="0.5">
   <div class="overlay"></div>
@@ -191,77 +252,160 @@
 <footer class="ftco-footer">
   <div class="container mb-5 pb-4">
     <div class="row">
-      <div class="col-lg col-md-6">
-        <div class="ftco-footer-widget">
-          <h2 class="ftco-heading-2 d-flex align-items-center">About</h2>
-          <p>Far far away, behind the word mountains, far from the countries.</p>
-          <ul class="ftco-footer-social list-unstyled mt-4">
-            <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-            <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-            <li><a href="#"><span class="fa fa-instagram"></span></a></li>
-          </ul>
-        </div>
+    <div class="col-lg col-md-6">
+      <div class="ftco-footer-widget">
+      <h2 class="ftco-heading-2 d-flex align-items-center">Connect with us
+      </h2>
+      <p>
+        You can connect with us in different social medias.
+      </p>
+      <ul class="ftco-footer-social list-unstyled mt-4">
+        <li>
+        <a href="#"><span class="fa fa-twitter"></span></a>
+        </li>
+        <li>
+        <a href="#"><span class="fa fa-facebook"></span></a>
+        </li>
+        <li>
+        <a href="#"><span class="fa fa-instagram"></span></a>
+        </li>
+      </ul>
       </div>
+    </div>
 
-      <div class="col-lg-4 col-md-6">
-        <div class="ftco-footer-widget">
-          <h2 class="ftco-heading-2">Links</h2>
-          <div class="d-flex">
-           <ul class="list-unstyled mr-md-4">
-             <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Project</a></li>
-             <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>About Us</a></li>
-             <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Services</a></li>
-             <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Blog Posts</a></li>
-             <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Industries</a></li>
-           </ul>
-           <ul class="list-unstyled ml-md-5">
-             <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Contact</a></li>
-             <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Help</a></li>
-             <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Privacy Policy</a></li>
-             <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Terms of Use</a></li>
-           </ul>
-         </div>
-       </div>
-     </div>
-
-     <div class="col-lg col-md-6">
-       <div class="ftco-footer-widget">
-        <h2 class="ftco-heading-2">Services</h2>
-        <ul class="list-unstyled">
-          <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Customer Services</a></li>
-          <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Prompt Delivery</a></li>
-          <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Reliable Equipment</a></li>
-          <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>New Heavy Equipment</a></li>
+    <div class="col-lg-4 col-md-6">
+      <div class="ftco-footer-widget">
+      <h2 class="ftco-heading-2">Quick Links
+      </h2>
+      <div class="d-flex">
+       <ul class="list-unstyled mr-md-4">
+        <li>
+          <a href="founder.html"
+          ><span class="fa fa-chevron-right mr-2"></span>Message</a
+          >
+        </li>
+        <li>
+          <a href="introduction.html"
+          ><span class="fa fa-chevron-right mr-2"></span>About Us</a
+          >
+        </li>
+        <li>
+          <a href="#"
+          ><span class="fa fa-chevron-right mr-2"></span>Services</a
+          >
+        </li>
+        <li>
+          <a href="#"
+          ><span class="fa fa-chevron-right mr-2"></span>Vacancies</a
+          >
+        </li>
+        </ul> 
+        <ul class="list-unstyled ml-md-5">
+        <li>
+          <a href="contact.html"
+          ><span class="fa fa-chevron-right mr-2"></span>Contact</a
+          >
+        </li>
+        <li>
+          <a href="#"
+          ><span class="fa fa-chevron-right mr-2"></span>Help</a
+          >
+        </li>
+        <li>
+          <a href="#"
+          ><span class="fa fa-chevron-right mr-2"></span>Privacy
+          Policy</a
+          >
+        </li>
+        <li>
+          <a href="#"
+          ><span class="fa fa-chevron-right mr-2"></span>Terms of
+          Use</a
+          >
+        </li>
         </ul>
+      </div>
       </div>
     </div>
 
     <div class="col-lg col-md-6">
       <div class="ftco-footer-widget">
-       <h2 class="ftco-heading-2">Have a Questions?</h2>
-       <div class="block-23 mb-3">
-         <ul>
-           <li><span class="fa fa-map-marker mr-3"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-           <li><a href="#"><span class="fa fa-phone mr-3"></span><span class="text">+2 392 3929 210</span></a></li>
-           <li><a href="#"><span class="fa fa-paper-plane mr-3"></span><span class="text">info@yourdomain.com</span></a></li>
-         </ul>
-       </div>
-     </div>
-   </div>
- </div>
-</div>
-<div class="container-fluid bg-primary">
- <div class="container">
-  <div class="row">
-   <div class="col-md-6 aside-stretch py-3">
-    
-     <p class="mb-0"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-       Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-       <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-     </div>
-   </div>
- </div>
-</div>
+      <h2 class="ftco-heading-2">Useful Links</h2>
+      <ul class="list-unstyled">
+        <li>
+        <a href="https://dofe.gov.np/"
+          ><span class="fa fa-chevron-right mr-2"></span>
+          Department Of Foreign Employment
+          </a
+        >
+        </li>
+        <li>
+        <a href="http://feo.gov.np/"
+          ><span class="fa fa-chevron-right mr-2"></span>Labour Approval</a
+        >
+        </li>
+        <li>
+        <a href="https://www.responsiblebusiness.org/"
+          ><span class="fa fa-chevron-right mr-2"></span>Responsible Business Alliance (RBA)</a
+        >
+        </li>
+      </ul>
+      </div>
+    </div>
+
+    <div class="col-lg col-md-6">
+      <div class="ftco-footer-widget">
+      <h2 class="ftco-heading-2">Have a Questions?</h2>
+      <div class="block-23 mb-3">
+        <ul>
+        <li>
+          <span class="fa fa-map-marker mr-3"></span
+          ><span class="text"
+          >Near to International Airport, Sinamangal-9, Kathmandu</span
+          >
+        </li>
+        <li>
+          <a href="#"
+          ><span class="fa fa-phone mr-3"></span
+          ><span class="text">(+977) 9813965529</span></a
+          >
+        </li>
+        <li>
+          <a href="#"
+          ><span class="fa fa-paper-plane mr-3"></span
+          >
+          <span class="text">admin@alfalahghr.com</span></a
+          >
+          <a href="#"
+          ><span class="fa fa-paper-planefe mr-3 ps-16"></span
+            >
+          <span class="text">info@alfalahghr.com</span></a
+          >
+        </li>
+        </ul>
+      </div>
+      </div>
+    </div>
+    </div>
+  </div>
+  <div class="container-fluid bg-primary">
+    <div class="container">
+    <div class="row">
+      <div class="col-md-6 aside-stretch py-3">
+      <p class="mb-0">
+        Copyright &copy;
+        <script>
+        document.write(new Date().getFullYear());
+        </script>
+        All rights reserved | Made with
+        <i class="fa fa-heart" aria-hidden="true"></i> by
+        <a href="#" target="_blank">Suman Bhattrai</a> & 
+        <a href="#" target="_blank">Goveend Sonee</a>
+      </p>
+      </div>
+    </div>
+    </div>
+  </div>
 </footer>
 
 <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -341,6 +485,7 @@
 <script src="js/google-map.js"></script>
 
 <script src="js/main.js"></script>
+<script src="js/top_navbar.js"></script>
 
 </body>
 </html>
